# usolver

./: .gitignore  Dockerfile  README.md  install.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
examples/: chained_solvers.py  chemical_engineering.py  coin_problem.py  cryptarithmetic.py  example_chain.py  example_cvxpy.py  example_ortools.py  example_z3.py  job_shop.py  knapsack.py  logistics.py  multilinear.py  network_flow.py  nqueens.py  nurse_scheduling.py  portfolio_theory.py  production_planning.py  resource_allocation.py  sparse_solver.py
examples/full/: README.md  client.py  flowsheet_data.csv  flowsheet_data.xlsx  flowsheet_metadata.csv  flowsheet_metadata.xlsx  prompt.md  solution.md
tests/: test_cvxpy.py  test_highs.py  test_ortools.py  test_z3.py
usolver_mcp/: __init__.py
usolver_mcp/models/: cvxpy_models.py  highs_models.py  ortools_models.py  z3_models.py
usolver_mcp/server/: main.py
usolver_mcp/solvers/: cvxpy_solver.py  highs_solver.py  ortools_solver.py  z3_solver.py
