[project]
name = "usolver_mcp"
version = "0.1.0"
description = "A best effort universal solver interface for MCP"
author="Stephen Diehl"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "z3-solver>=4.14.1.0",
    "pydantic>=2.0.0",
    "returns>=0.20.0",
    "fastmcp>=0.1.0",
    "cvxpy",
    "ortools<9.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "RUF"]
ignore = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-third-party = ["z3", "returns", "fastmcp", "mcp"]

[tool.hatch.build.targets.wheel]
packages = ["usolver_mcp"]

[tool.hatch.build.targets.wheel.scripts]
usolver = "usolver_mcp.server.main:main"

[project.scripts]
usolver = "usolver_mcp.server.main:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.2",
]
